fixed footer issue on smaller resolution

--- a/extraRecipeOne/extraRecipeOneStyle.css
+++ b/extraRecipeOne/extraRecipeOneStyle.css
@@ -7,8 +7,11 @@ body {
 }
 
 @font-face {
-    font-family: Raleway; src: url("/fonts/raleway/Raleway-Italic-VariableFont_wght.ttf");
-    font-family: Raleway; font-weight: bold; src: url("/fonts/raleway/Raleway-VariableFont_wght.ttf");
+    font-family: Raleway;
+    src: url("/fonts/raleway/Raleway-Italic-VariableFont_wght.ttf");
+    font-family: Raleway;
+    font-weight: bold;
+    src: url("/fonts/raleway/Raleway-VariableFont_wght.ttf");
 }
 
 a {
@@ -39,12 +42,12 @@ h3 {
 
 /* PageWrapper*/
 .pageWrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 1920px;
-  width: 100%;
-  margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 #pageContent {
@@ -197,7 +200,8 @@ tr {
 }
 
 td {
-    padding-left: calc((100vw - 1920px) / 2 + 160px);;
+    padding-left: calc((100vw - 1920px) / 2 + 160px);
+    ;
     padding-bottom: 6px;
     padding-top: 6px;
 }
@@ -258,10 +262,11 @@ footer {
     justify-content: center;
     gap: 12px;
 }
+
 #profilePicture {
     height: auto;
     width: 64px;
-    border-radius: 50%;     
+    border-radius: 50%;
 }
 
 /*Responsive Menu*/
@@ -304,7 +309,7 @@ footer {
     display: none;
 }
 
-/* Responsiveness */ 
+/* Responsiveness */
 
 @media (max-width: 1920px) {
     td {
@@ -360,10 +365,12 @@ footer {
         margin-left: 80px;
         margin-right: 80px;
     }
+
     #naviLogoFooter {
         margin-left: 80px;
     }
-     #footerIconContainer {
+
+    #footerIconContainer {
         margin-right: 80px;
     }
 }
@@ -401,6 +408,12 @@ footer {
         gap: 12px;
     }
 
+    #footerContent {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     #footerIconContainer {
         display: none;
     }
@@ -408,6 +421,7 @@ footer {
     #datenschutzLink {
         display: none;
     }
+
     #naviLogoFooter {
         margin-left: 0px;
         justify-content: center;
@@ -432,7 +446,7 @@ footer {
         margin-left: 40px;
     }
 
-   h1 {
+    h1 {
         margin-right: 40px;
         margin-left: 40px;
     }
